# zgram

./: .gitignore  BENCHMARK.md  README.md  build.zig  build.zig.zon  pyproject.toml  requirements-test.txt  setup.py
benchmark/: generate_data.py  run_all.sh
benchmark/cpp-peglib/: CMakeLists.txt  main.cpp
benchmark/data/: large.json  medium.json
benchmark/pegtl/: CMakeLists.txt  main.cpp
benchmark/pest/: Cargo.toml
benchmark/pest/src/: json.pest  main.rs
benchmark/rust-peg/: Cargo.toml
benchmark/rust-peg/src/: main.rs
benchmark/zgram/: main.zig
examples/sql2mongo/: sql2mongo.py
src/: cache.zig  codegen.zig  compiler.zig  grammar_parser.zig  jit_codegen.zig  jit_compiler.zig  jit_helpers.zig  lib.zig  llvm_builder.zig  parse_abi.zig  templates.zig  zgram_core.zig
src/zig_templates/: grammar_lib.zig  grammar_types.zig  parse_abi.zig  parser_engine.zig
test/: benchmark.py  conftest.py  test_benchmark_json.py  test_benchmark_sql2mongo.py  test_edge_cases.py  test_grammar_correctness.py  test_hwm.py  test_json_parsing.py  test_node_api.py
