[build-system]
requires = ["pyoz"]
build-backend = "pyoz.build"

[project]
name = "zgram"
version = "0.1.0"
description = "A Python extension module built with PyOZ"
requires-python = ">=3.8"
readme = "README.md"

[tool.pyoz]
# Path to your Zig source file
module-path = "src/lib.zig"

# Optimization level for release builds: "Debug", "ReleaseSafe", "ReleaseFast", "ReleaseSmall"
# optimize = "ReleaseFast"

# Strip debug symbols in release builds
# strip = true

# Linux platform tag for wheel builds (default: "linux_x86_64" or "linux_aarch64")
# Use manylinux tags only if building in a manylinux container
# linux-platform-tag = "manylinux_2_17_x86_64"
